--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,8 @@
 name: Github CI
 
 on:
-  pull_request:
-    branches:
-      - master
-
-  push:
-    branches:
-      - master
+  - push
+  - pull_request
 
 jobs:
   build:
@@ -20,13 +15,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 14
 
       - name: Install
-        run: npm install
+        run: yarn install
 
       - name: Test
-        run: npm test
+        run: yarn test
 
       - name: Release
         run: npx semantic-release
